--- a/src/assets/img/locales/en.json
+++ b/src/assets/img/locales/en.json
@@ -82,6 +82,7 @@
     "static.message.newPasswordUppercase": "Password must contain at least one uppercase letter",
     "static.CompareSelect.ForecastsSidebySide": "Compare the data between forecasts side-by-side by clicking the “Show Data” button below the graph. Any",
     "static.supplyPlan.duplicateConsumption": "Duplicate consumption",
+    "static.forecastErrorReport.planningUnitAboveThreshold": "Calculated Forecast Error is above the Forecast Error Threshold",
     "static.region.capacitycbmtext": "Enter Volume (m^3)",
     "static.supplyPlanFormula.suggestedOrderQtyEx6": "Unmet Demand = 120",
     "static.forecastReport.nationalView": "National View",
@@ -99,6 +100,7 @@
     "static.manualTagging.OrderNo": "ERP Shipment Number",
     "static.supplyPlan.amcPastOrFuture": "AMC (months in past/future)",
     "static.sync.clickOkMsg": "* Click `OK` to download latest server version (overrides local version)",
+    "static.report.planningUnitNotes": "Planning Unit Notes",
     "static.common.refreshPage": "Refresh page",
     "static.tooltip.SelectAsForecast": "Select one forecast as the final forecast for each region and planning unit",
     "static.tooltip.startMonthForHistoricData": "To change the start month, please go back to the Node Data screen and change the month",
@@ -151,6 +153,7 @@
     "static.QATForecastImport.National": "National",
     "static.problemActionReport.problemCategory": "Problem Category",
     "static.tooltip.PriceType": "Select a procurement agent for your price type If PA proces are available QAT will populate the price You may override QAT provided prices with your own. If you dont see the desired procurement agent, select custom and indicate the procurement agent name in the notes.",
+    "static.forecastErrorReport.planningUnitAboveThresholdNote": "Note: The Forecast Error Threshold values will not be highlighted red if viewing this report in Equivalency Units or multiple Forecasting Units/Planning Units",
     "static.report.shipmentCost": "Shipment Cost",
     "static.mt.reminders2D": "Conversion Factor –",
     "static.mt.reminders2C": "If there is a note in a QAT shipment, this will carry over when you link to the ERP shipment. ",
@@ -317,6 +320,7 @@
     "static.compareAndSelect.compareToConsumptionForecast": "Compare to Consumption Forecast",
     "static.mt.programNotMatch": "Program does not match.",
     "static.fundingSource.selectFundingSource": "Select Funding Source",
+    "static.tree.seeChildrenOf": "See children of",
     "static.loadDeleteProgram.loadDeleteProgram": "Download/Delete Program",
     "static.report.lastmodifieddate": "Last modified date",
     "static.report.selectProgram": "Select Program and Version",
@@ -457,6 +461,7 @@
     "static.ManageTree.BuildTree": "Manage Tree - Build Trees",
     "static.login.loginOnline": "Online",
     "static.versionSettings.confirmUpdate": "Note: If you changed the forecast period, you will need to update one node per every scenario for every tree for tree forecasts to properly extend.",
+    "static.dataentry.conversionFactorTooltip": "User-created or auto-generated in the Alternate Reporting Unit screen. `*` will multiply and `/` will divide the Order Quantity (ARU) by the Conversion Factor",
     "static.report.problemTransDetails": "Problem Transaction Details",
     "static.supplyPlan.addNewInventory": "Add New Inventory Count",
     "static.dataEntryAndAdjustments.XRepresentMonths": "Where xs represent months, and ys represent actual consumption,",
@@ -479,6 +484,7 @@
     "static.dataentry.convertedToPlanningUnit": "Converted to Planning Unit",
     "static.common.dec": "Dec",
     "static.dataEntry.True": "True",
+    "static.tree.nodeName": "Node Name",
     "static.listTree.loadedToBuildTree": "A forecast program must first be downloaded in order to build a tree (either manually or from a tree template.)",
     "static.breadcrum.list": "{{entityname}}",
     "static.mt.originalQty": "Original QAT Quantity",
@@ -668,6 +674,7 @@
     "static.extrapolation.MoreSensitive": "More sophisticated models are more sensitive to problems in the data",
     "static.common.listtree": "List Tree",
     "static.dataentry.stockedOutPer": "Stockout Rate (%)",
+    "static.tree.showOnlyActive": "Show Only Active",
     "static.tree.asA%OfParent": "as a % of parent",
     "static.dataEntryAndAdjustments.StockOutDays": "Stocked Out (days)",
     "static.common.accept": "Accept",
@@ -871,6 +878,7 @@
     "static.tree.manualChange": "Manual Change (+/- %)",
     "static.commit.qatshipmentId": "QAT Shipment ID",
     "static.month.mar": "Mar",
+    "static.tree.editLevelName": "Edit Level Name",
     "static.procurementUnit.widthUnit": "Width Unit",
     "static.QATForecastImport.ImportedIntoEach": "(packs of 1) will be imported into each region for month X",
     "static.month.may": "May",
@@ -960,6 +968,7 @@
     "static.formula.suggestedText102": "= 1,020 in Jul 2023",
     "static.tree.nodeType": "Node Type",
     "static.formula.suggestedText100": "Min Qty",
+    "static.tree.shiftDown": "Shift Down",
     "static.listTree.addSuccessMessageAll": "Your selected planning units have been added successfully. Please click create tree to duplicate the tree.",
     "static.supplyPlan.yesAccount": "Yes - Include",
     "static.importIntoQAT.forecastTracerCategory": "Forecast Tracer Category",
@@ -1031,6 +1040,7 @@
     "static.common.dlink": "Delink Shipment",
     "static.header.changesInLocalVersion": "Upload local version to server",
     "static.UpdateversionSettings.UpdateversionSettings": "Update Version Settings",
+    "static.alternateReportingUnit.divide": "Divide",
     "static.mt.tab2Purpose": "Use this screen to update or de-link existing QAT-ERP linkages.",
     "static.equivalancyUnit.equivalancyUnitName": "Equivalency Unit (Name)",
     "static.program.validcountrytext": "Select country",
@@ -1087,6 +1097,7 @@
     "static.report.plannedBudgetAmt": "Allocated to Planned Shipments",
     "static.ticket.ticketcreated": " Ticket has been created.",
     "static.username.username": "Username",
+    "static.tree.conversionFUToPU": "FU:PU Conversion Factor",
     "static.report.issupplyplanapprove": "Supply Plan Approved?",
     "static.report.shelfLife": "Shelf Life (months)",
     "static.common.active": "Active",
@@ -1178,6 +1189,7 @@
     "static.planningUnitSetting.existingShipments": "Existing Shipments (",
     "static.message.addTreeTemplate": "Tree Template Added Successfully",
     "static.login.loginAgain": "Please login again to access QAT in online mode.",
+    "static.tooltip.planningUnitSettings": "Program Admins can update Planning Unit Settings & Notes under Program Management > Update Planning Unit.",
     "static.CompareSelect.Graph": "Graph",
     "static.region.validcountry": "Enter a value greater than 0",
     "static.compareAndSelect.typeTitle": "C indicates a consumption forecast, T indicates a Tree Forecast.",
@@ -1190,6 +1202,7 @@
     "static.region.country": "Country",
     "static.supplyPlan.approved": "Submitted & Approved",
     "static.batchDetails.warningFefo": "NOTE: The only batch remaining is FEFO, which is the default setting. (You will not see the FEFO row when you return to this screen, but FEFO will be applied.)",
+    "static.shipmentOverview.pieChartNote": "Note: Percentage labels below 2% are not displayed",
     "static.procurementUnit.procurementUnitText": "Enter Procurement Unit Name",
     "static.shipmentDataentry.procurementAgentOrderNo": "Proc. Agent Order No.",
     "static.supplyplan.amcmessage": "Current month is included in the months in future for AMC",
@@ -1202,6 +1215,7 @@
     "static.dataEntryAndAdjustments.AdjustedConsumption": "Adjusted Consumption",
     "static.listTree.purpose": "Purpose",
     "static.sync.deleteLocalVersion": "- DELETE local version {{programCodeLocal}}",
+    "static.tooltip.conversionFactorPU": "For more details, go to Realm Level Masters > Products > Planning Units. If data looks incorrect, please submit a ticket in the QAT helpdesk.",
     "static.label.noFundsAvailable": "Requested amount not available",
     "static.procurementUnit.lengthQtyText": "Enter Length Quantity",
     "static.dataSource.program": "Program",
@@ -1271,6 +1285,8 @@
     "static.common.max30digittext": "Maximum 30 characters only",
     "static.budget.budgetamount": "Budget amount",
     "static.report.expiredInventory": "Expiries",
+    "static.updatePU.noteText1": "Note : If you want to update procurement agent specific details, go to",
+    "static.updatePU.noteText2": "screen",
     "static.procurementagent.procurementagentcode": "Procurement agent display name",
     "static.program.validapprovetoshiptext": "Enter `Approved to Shipped` lead time (in months)",
     "static.tooltip.MonthlyChange": "Change in percentage points per month. For example, if the starting node value is 60% of the parent, and the Monthly Change is 5%, then month 2 starts at 65%, month 3 starts at 70%, etc.",
@@ -1278,7 +1294,7 @@
     "static.chooseFile.chooseFile": "Select File",
     "static.common.onlinealerttext": "You must be online to conduct this operation",
     "static.procurementAgent.UnitPerPalletEuro1": "Unit Per Pallet (EURO1)",
-    "static.countrySpecificPrices.countrySpecificPrices": "Program/Procurement Agent Prices",
+    "static.countrySpecificPrices.countrySpecificPrices": "Program/Procurement Agent Info",
     "static.procurementAgent.UnitPerPalletEuro2": "Unit Per Pallet (EURO2)",
     "static.shipmentTooltip.budget": "Each shipment beyond the planned stage requires a budget. Add or update budget information in the Budget screen",
     "static.unitType.unitTypeName": "Unit type name",
@@ -1423,6 +1439,7 @@
     "static.formula.suggestedText71": "Min Qty = 1,000; Reorder Interval = 6 months; Distribution lead time (X) = 1 month",
     "static.formula.suggestedText72": "Calculating for Month N =Nov 2022",
     "static.dashboard.commitVersion": "Upload Version",
+    "static.tree.deleteScenario": "Delete Scenario",
     "static.dashboard.productcatalog": "Program Catalog",
     "static.inventory.manualAdjustment": "Manual Adjustment",
     "static.list.listOrganisation": "Go to Organization Management",
@@ -1770,6 +1787,7 @@
     "static.common.managetree": "Manage Tree",
     "static.common.stopdate": "End date",
     "static.commitTree.draftVersion": "Draft Version",
+    "static.tree.showInactive": "Show Inactive",
     "static.procurementUnit.labelingText": "Enter Labeling",
     "static.tree.parent": "Parent",
     "static.common.quarter4": "Quarter 4",
@@ -2433,6 +2451,7 @@
     "static.tree.calculatedChange": "Calculated Change (+/- %)",
     "static.inventoryTurns.reorderError": "Reorder interval greater than 12",
     "static.tree.nodeValue": "Node Value",
+    "static.forecastErrorReport.forecastErrorThreshold": "Forecast Error Threshold",
     "static.compareAndSelect.forecastError": "Forecast Error (%)",
     "static.dashboard.deleteThisProgram": "Delete this Program",
     "static.pipeline.productToPlanningUnit": "PipeLine product to Planning Unit",
@@ -2477,6 +2496,7 @@
     "static.report.inventoryReports": "Inventory Reports",
     "static.common.region": "Region",
     "static.importFromQATSupplyPlan.ProgramAndPlanningUnits": "Program and Planning Units",
+    "static.message.ppupaAlreadyExists": "Program, planning unit and procurement agent mapping already exists",
     "static.message.tokenError": "One-time password error",
     "static.importFromQATSupplyPlan.supplyPlanPlanningUnit": "Supply Plan Planning Unit",
     "static.tooltip.ForecastErrorMonthUsed": "Number of months used in the Forecast Error WAPE calculation.",
@@ -2504,6 +2524,7 @@
     "static.forecastMethod.historicalData": "Consumption",
     "static.common.backTo": "Back to",
     "static.programLoadedAndmasterDataSync.success": "Program downloaded and master data sync successfully",
+    "static.tooltip.levelReorderNodeUnit": "Displayed in the Y-axis in the Modeling Validation screen.",
     "static.dataEntryAndAdjustments.HistoricalActual": "screen. Historical actual consumption can be quantities sold, quantities dispensed to user or quantities issued by storage facilities. On this screen, users can adjust historical consumption data that has been either manually entered on this screen or that has been imported from a QAT supply plan program (if you desire to import, please proceed first to the",
     "static.message.inventorySaved": "Inventory data saved",
     "static.message.alphaspeccharnumtext": "Only letters, numbers and special characters such as / , - are allowed",
@@ -2548,6 +2569,7 @@
     "static.procurementUnit.validMaxValueText": "A maximum of 14 characters are allowed",
     "static.commitTree.treeScenarios": "Tree Scenarios",
     "static.country.countrycode2": "Country Display Name2",
+    "static.tree.levelChangeNote": "Use arrows to indicate the desired node order from left to right.  Only nodes in this level are shown.",
     "static.inventory.countrySKU": "Country SKU",
     "static.add.addRegion": "Add Region",
     "static.language.english": "English",
@@ -2558,6 +2580,7 @@
     "static.common.delete": "Delete",
     "static.supplyPlan.actualConsumption": "Actual Consumption",
     "static.mt.selectShipmentOfSamePlanningUnit": "Please select shipments with same planning units",
+    "static.pu.puNotesTooltip": "Add notes about product phase in/out, data sources, primary funders. etc. Notes will be visible in Supply Plan Report and in Supply Plan Version and Review screen.",
     "static.integration.addBodyParameter": "Add body parameter",
     "static.supplyPlan.whenToSuggestQty5": "Closing Balance for 2nd month = 6,500",
     "static.supplyPlan.whenToSuggestQty6": "Min Quantity= 8,000",
@@ -2576,6 +2599,7 @@
     "static.equivalancyUnit.ExistingEquivalency": "If you dont see an equivalency unit that you would like to map or you would like to edit an existing equivalency unit, click on the Manage Equivalency Unit button in top right of the screen.",
     "static.ModelingTransfer.Exponential": "Exponential",
     "static.ForecastSummary.NationalViewText": "Use this view to see your forecast at a",
+    "static.tree.shiftUp": "Shift Up",
     "static.tooltip.TypeOfUsePU": "To change edit from parent Forecasting Unit node",
     "static.compareAndSelect.actuals": "Actuals (Adjusted)",
     "static.shipment.groupByProcurementAgentType": "Group by Procurement Agent Type",
@@ -2583,6 +2607,8 @@
     "static.supplyPlan.budgetArray": "Budget Array",
     "static.supplyPlan.currentSupplyPlan": "Local Supply Plan",
     "static.role.roleName": "Role name",
+    "static.updatePPUPA.noteText1": "Note : If you want to update program specific details, go to",
+    "static.updatePPUPA.noteText2": "screen",
     "static.commit.newDataCurrentVersion": "New data from current version",
     "static.planningunit.planningunittext": "Enter Planning Unit",
     "static.supplyPlan.qty": "Qty",
@@ -2617,6 +2643,7 @@
     "static.commitVersion.commitNote": "Please do not navigate away from this page during the upload. If you do, Master Data Sync or re-logging in is required for continued data entry.",
     "static.CompareSelect.AssumingReliable": "screen.Assuming reliable actual consumption data, this comparison helps users determine if their Tree Forecasts are realistic.",
     "static.editStatus.problemSuggestionText": "Enter Problem Suggestion",
+    "static.updatePPUPA.atleastOneValue": "Enter atleast one of the value",
     "static.validation.fieldRequired": "This is required",
     "static.realm.monthInPastForAmcText": "Enter # of months in the past used for calculating AMC",
     "static.breadcrum.edit": "Update {{entityname}}",
@@ -2736,6 +2763,7 @@
     "static.modelingValidation.levelUnit": "Level Unit",
     "static.common.notes": "Notes",
     "static.procurementUnit.validNumberText": "Specify a Number",
+    "static.pu.forecastErrorThresholdPercentage": "Forecast Error Threshold (%)",
     "static.healtharea.countrytext": " Please select country",
     "static.dashboard.downloadprogram": "Download program",
     "static.program.programCode": "Program Code",
@@ -2974,6 +3002,7 @@
     "static.mt.selectExistingShipment": "Select Existing Shipment",
     "static.validated.restrictionForecastConsumption": "Please enter data entry restriction for Forecast Consumption",
     "static.program.submitProgram": "Submit Program",
+    "static.alternateReportingUnit.multiply": "Multiply",
     "static.compareAndSelect.missingData": "Missing Data",
     "static.commitTree.main": "Main",
     "static.program.as": "as",
@@ -3059,9 +3088,11 @@
     "static.common.for": "For",
     "static.common.max25digittext": "Maximum 25 characters only",
     "static.loading.loading": "Loading...",
+    "static.unit.conversionMethod": "Conversion Method",
     "static.CompareSelect.TabularData": "Tabular Data Table",
     "static.report.excess": "Excess Stock",
     "static.Tooltip.ExistingShipments": "User-entered in the Update Planning Units screen",
+    "static.tree.nodeltr": "Node Position (L to R)",
     "static.planningunit.planningunitupdate": "Map Alternate Reporting Unit",
     "static.report.monthsOfStock": "Months of Stock (MOS)",
     "static.procurementUnit.duplicateProcurementUnit": "Duplicate Procurement Unit Details Found",
@@ -3218,6 +3249,7 @@
     "static.dashboard.monthlyForecast": "Monthly Forecast",
     "static.supplyplan.adjustmentDataEntry": "Adjustment and inventory details data entry",
     "static.program.datasetDisplayName": "Program Display Name",
+    "static.tooltip.planningUnitNotes": "Program Admins can update Planning Unit Notes under Program Management > Update Planning Unit.",
     "static.report.shipmentSummeryReport": "Shipment Summary",
     "static.ModelingTransfer.ExtrapolationNotAllowed": "Extrapolation is not allowed on a node that also has a transfer, whether that be to/from another node.",
     "static.commit.inventoryId": "Inventory ID",
@@ -3285,11 +3317,5 @@
     "static.currency.conversionrateusd": "Conversion rate to 1 USD",
     "static.logout.confirmLogout": "Are you sure you want to log out?",
     "static.common.node": "Node",
-    "static.pipeline.pipelineConvertorLinux": "Linux.",
-    "static.unit.conversionMethod": "Conversion Method",
-    "static.alternateReportingUnit.multiply": "Multiply",
-    "static.alternateReportingUnit.divide": "Divide",
-    "static.tree.deleteScenario": "Delete Scenario",
-    "static.tree.showOnlyActive": "Show Only Active",
-    "static.tree.showInactive": "Show Inactive"
+    "static.pipeline.pipelineConvertorLinux": "Linux."
 }
