--- a/src/assets/img/locales/en.json
+++ b/src/assets/img/locales/en.json
@@ -29,7 +29,7 @@
     "static.dataentry.graphNotes": "Note: Graph and summary table only update after submitting.",
     "static.CompareSelect.VerifyPlanningUnit": "to verify all planning units together.",
     "static.ForecastSummary.DuringForecast": "during your forecast period",
-    "static.message.login.disabled": "User account is disabled",
+    "static.message.login.disabled": "User account is inactive",
     "static.QATForecastImport.ImportColumn": "Use the Import? column to de-select any forecasts that you do NOT want to import into the supply plan. If checked, the Converted Forecasted Consumption will override the Supply Plan forecast. If unchecked, the current Supply Plan forecast will remain.",
     "static.sync.keepLocalVersion": "- Keep downloaded version {{programCodeLocal}}",
     "static.tooltip.CopyFromTemplate": "Use a template to fill in all subsquent fields. Edit these in the Program Management > Usage Template screen.",
@@ -811,7 +811,7 @@
     "static.common.text": "Text",
     "static.report.forecastErrorMonthlyFormulaNew14": "For each month, adds up all the forecasted consumption from all mapped forecasting or planning units and converts those totals into equivalency units, so that there is only one forecasted consumption figure per month. ",
     "static.report.forecastErrorMonthlyFormulaNew12": "QAT identifies which forecasting or planning units are mapped to the selected equivalency unit",
-    "static.productCategory.parentIsDisabled": "The parent category is disabled.",
+    "static.productCategory.parentIsDisabled": "The parent category is inactive.",
     "static.extrapolation.AutomaticallyCalculates": "QAT automatically calculates forecast error metrics using several methods. These include",
     "static.supplyPlan.plannedDate": "Planned Date",
     "static.shipment.selectValidBudget": "Please select valid budget",
@@ -1750,7 +1750,7 @@
     "static.program.validselectprogramtext": "Select program",
     "static.quantimed.existingconsupmtionqty": "Current QAT Forecasted Consumption",
     "static.common.demoNetworkErrorMessage": "Network error. Please check your internet connection or contact your organizational IT department to ensure demo-api.quantificationanalytics.org/# and demo.quantificationanalytics.org/# are whitelisted for firewall access.",
-    "static.message.user.disabled": "User account is disabled. Contact QAT administrator.",
+    "static.message.user.disabled": "User account is inactive. Contact QAT administrator.",
     "static.problemReport.addressedDesc": "Problem has been manually marked by either reviewer or user as 'Addressed'. The user applies this status when they cannot resolve the problem through data entry. This status must be accompanied by a note. The reviewer uses this status if this problem cannot be resolved this review period, but will be resolved in the future, most likely in a few periods, rather than before the next review.",
     "static.loadProgram.notDownloaded": "Program is not downloaded.",
     "static.inventoryType.adjustment": "Adjustment",
@@ -2787,7 +2787,7 @@
     "static.supplyPlan.qatProduct": "QAT Planning Unit",
     "static.ManageTree.ForecastTreeBuilt": "The forecast tree is built from the top down, using different types of “nodes”. See the Node Types and Node Actions below. Each forecast tree must include one or more Planning Unit Nodes, which form the forecast output, for that tree to be available in the \"Compare and Select\" screen. Each Planning Unit Node must stem from a Forecasting Unit Node.",
     "static.organisation.organisation": "Organization",
-    "static.common.disabled": "Disabled",
+    "static.common.disabled": "Inactive",
     "static.dashboard.planningunit": "Planning Unit",
     "static.programValidation.programCode": "Combination of program code and unique code character length must be less then 50.",
     "static.dataEntryAndAdjustments.InterpolatedLine": "The formula for the interpolated line is",
