labels added, version changed for 2.79 rel

--- a/src/assets/img/locales/en.json
+++ b/src/assets/img/locales/en.json
@@ -29,7 +29,7 @@
     "static.dataentry.graphNotes": "Note: Graph and summary table only update after submitting.",
     "static.CompareSelect.VerifyPlanningUnit": "to verify all planning units together.",
     "static.ForecastSummary.DuringForecast": "during your forecast period",
-    "static.message.login.disabled": "User account is disabled",
+    "static.message.login.disabled": "User account is inactive",
     "static.QATForecastImport.ImportColumn": "Use the Import? column to de-select any forecasts that you do NOT want to import into the supply plan. If checked, the Converted Forecasted Consumption will override the Supply Plan forecast. If unchecked, the current Supply Plan forecast will remain.",
     "static.sync.keepLocalVersion": "- Keep downloaded version {{programCodeLocal}}",
     "static.tooltip.CopyFromTemplate": "Use a template to fill in all subsquent fields. Edit these in the Program Management > Usage Template screen.",
@@ -140,6 +140,7 @@
     "static.dataEntryAndAdjustments.RepeatSteps": "Repeat steps 2-4 for each planning unit",
     "static.report.OrderedbudgetStatus": "Approved, Shipped, Arrived, Received",
     "static.consumption.actual": "Actual",
+    "static.tree.inTotal": "In total, ",
     "static.realm.orderFrequencyText": "Enter order interval (# months between orders)",
     "static.dashboard.addupdateuser": "User",
     "static.ticket.subheader": "Create Ticket",
@@ -176,8 +177,8 @@
     "static.integration.editIntegration": "Edit Integration",
     "static.dashboard.qatProblemList": "QAT Problem List",
     "static.placeholder.LagInMonthFUNode": "Use this feature for phased product usage. For example, if the lag is 2, the product usage will begin 2 months after the parent node dates.",
-    "static.priority.medium": "Medium",
     "static.import.doNoImportCheckbox": "Do not import all unmapped planning units",
+    "static.priority.medium": "Medium",
     "static.mt.reminders4A": "If you delink a shipment, the QAT shipment will revert to the original shipment’s note and not carry over any updates you made after linking. For this, we recommend copying the note before de-linking and pasting it into the QAT shipment after.",
     "static.dataentry.maxRange": "Please select date range within 36 months",
     "static.program.programmanager": "Program manager",
@@ -822,7 +823,7 @@
     "static.common.text": "Text",
     "static.report.forecastErrorMonthlyFormulaNew14": "For each month, adds up all the forecasted consumption from all mapped forecasting or planning units and converts those totals into equivalency units, so that there is only one forecasted consumption figure per month. ",
     "static.report.forecastErrorMonthlyFormulaNew12": "QAT identifies which forecasting or planning units are mapped to the selected equivalency unit",
-    "static.productCategory.parentIsDisabled": "The parent category is disabled.",
+    "static.productCategory.parentIsDisabled": "The parent category is inactive.",
     "static.extrapolation.AutomaticallyCalculates": "QAT automatically calculates forecast error metrics using several methods. These include",
     "static.supplyPlan.plannedDate": "Planned Date",
     "static.shipment.selectValidBudget": "Please select valid budget",
@@ -1650,6 +1651,7 @@
     "static.dashboard.forecastmetrics": "Forecast Error (by Planning Unit)",
     "static.dataSet.dataSetManager": "Progarm Manager",
     "static.program.programSync": "Program sync",
+    "static.tree.indefinitely": "indefinitely",
     "static.ManageTree.ForecastingUnit": "Forecasting Unit",
     "static.program.programName": "Program name",
     "static.extrapolation.ARIMATextOne": "ARIMA modeling enables two statistical models designed for stationary time series to be integrated and applied to non-stationary time series, that is, time series that have trends or seasons.",
@@ -1761,7 +1763,7 @@
     "static.program.validselectprogramtext": "Select program",
     "static.quantimed.existingconsupmtionqty": "Current QAT Forecasted Consumption",
     "static.common.demoNetworkErrorMessage": "Network error. Please check your internet connection or contact your organizational IT department to ensure demo-api.quantificationanalytics.org/# and demo.quantificationanalytics.org/# are whitelisted for firewall access.",
-    "static.message.user.disabled": "User account is disabled. Contact QAT administrator.",
+    "static.message.user.disabled": "User account is inactive. Contact QAT administrator.",
     "static.problemReport.addressedDesc": "Problem has been manually marked by either reviewer or user as 'Addressed'. The user applies this status when they cannot resolve the problem through data entry. This status must be accompanied by a note. The reviewer uses this status if this problem cannot be resolved this review period, but will be resolved in the future, most likely in a few periods, rather than before the next review.",
     "static.loadProgram.notDownloaded": "Program is not downloaded.",
     "static.inventoryType.adjustment": "Adjustment",
@@ -2275,6 +2277,7 @@
     "static.actionCancelled": "Action cancelled",
     "static.forecastValidation.noMissingGaps": "No months missing actual consumption values (gap)",
     "static.dashboard.programheader": "Program",
+    "static.tree.times": "times",
     "static.extrapolation.confidenceLevel": "Confidence interval",
     "static.forecastReport.hideCalculations": "Hide Calculations",
     "static.procurementAgentPlanningUnit.weight": "Weight",
@@ -2294,6 +2297,7 @@
     "static.translation.english": "English",
     "static.tree.MonthEnd": "(Month End)",
     "static.tooltip.TargetEndingValue": "Ending value at the target date",
+    "static.programPlanningUnit.forecastErrorTooltip": "Used in the Forecast Error (Monthly) report to signify that a specific month’s forecast error is above this desired threshold value",
     "static.problemContext.viewTrans": "View Notes History",
     "static.program.shippedToArrivedByAirLeadTime": "Enter `Shipped to Arrived` air lead time (in months)",
     "static.common.year": "Year",
@@ -2636,6 +2640,7 @@
     "static.programPU.minQtyTooltip": "Required if planning by quantity. Note that maximum MOS = min MOS + reorder interval. * AMC",
     "static.syncProgram.loadAndDeleteWithUncommittedChanges": "For program {{programCode}}, There is a most recent server version. Do you want to download and delete? (Warning! you have non uploaded changes)",
     "static.LoadConsumptionFromSupplyPlanning.LoadConsumptionFromSupplyPlanning": "Load Consumption from Supply Planning",
+    "static.shipmentTooltip.freightCost": "Calculated using the user-entered freight percentage in the Update Program Info screen",
     "static.dataEntryAndAdjustments.NumberOfStock": "For imported data, the number of stock out days is pulled in from the QAT supply plan program, if data is collected. The default value for stock out days is zero days (product assumed always in stock). The user can change this to the correct value. The calculation assumes that the days the product was stocked out would have had the same consumption rate as the rest of the time the product was in stock. The default value for number of days in a month are based on the calendar days, but users can adjust the number of days used for the stock out calculation in",
     "static.program.dataimportsuccess": "Data imported successfully",
     "static.ManageTree.ClickOnGearIcon": "Click on the gear icon",
@@ -2786,6 +2791,7 @@
     "static.region.glnvalue": "GLN must be a 13 digit number. However, this is not a required field",
     "static.supplyPlan.shipmentsDateObject": "Shipment Dates",
     "static.supplyPlanFormula.expiredStockEx": "Expired Stock = Sum of this month’s opening balance of batches, which are expiring this month",
+    "static.tree.eachTime": "each time",
     "static.tooltip.CalculatedMonthOnMonthChnage": "Using the provided target  QAT calculates a monthly change which will be fed back into the previous screen",
     "static.CompareSelect.AvailableConsumption": "QAT compares available Consumption Forecasts and Tree Forecasts. For any Tree Forecasts, QAT will flag the percentage above the highest or below the lowest Consumption Forecast. The comparison will be highlighted in",
     "static.dataEntryAndAdjustments.UnknownData": "Where any unknown data values are (x, y)",
@@ -2801,7 +2807,7 @@
     "static.supplyPlan.qatProduct": "QAT Planning Unit",
     "static.ManageTree.ForecastTreeBuilt": "The forecast tree is built from the top down, using different types of “nodes”. See the Node Types and Node Actions below. Each forecast tree must include one or more Planning Unit Nodes, which form the forecast output, for that tree to be available in the \"Compare and Select\" screen. Each Planning Unit Node must stem from a Forecasting Unit Node.",
     "static.organisation.organisation": "Organization",
-    "static.common.disabled": "Disabled",
+    "static.common.disabled": "Inactive",
     "static.dashboard.planningunit": "Planning Unit",
     "static.programValidation.programCode": "Combination of program code and unique code character length must be less then 50.",
     "static.dataEntryAndAdjustments.InterpolatedLine": "The formula for the interpolated line is",
