--- a/src/assets/img/locales/en.json
+++ b/src/assets/img/locales/en.json
@@ -3379,5 +3379,6 @@
     "static.common.changetheme":"Change Theme",
     "static.common.lighttheme":"Light Theme",
     "static.common.darktheme":"Dark Theme",
-    "static.programPlanningUnit.forecastErrorTooltip":"Used in the Forecast Error (Monthly) report to signify that a specific month’s forecast error is above this desired threshold value"
+    "static.programPlanningUnit.forecastErrorTooltip":"Used in the Forecast Error (Monthly) report to signify that a specific month’s forecast error is above this desired threshold value",
+    "static.supplyPlan.start":"Start"
 }
