progress bar changes for extrapolation

--- a/src/assets/img/locales/en.json
+++ b/src/assets/img/locales/en.json
@@ -3254,5 +3254,6 @@
     "static.extrapolation.extrapolateUsingDefaultParams": "Extrapolate using default parameters",
     "static.extrapolation.extrapolateUsingOptimizedArimaAndTes": "Extrapolate with optimized ARIMA & TES",
     "static.extrapolation.bulkExtrapolationSuccess": "Bulk Extraploation done successfully",
-    "static.extrapolation.extrapolateTES&ARIMAUsingDefaultParams": "Extrapolate ARIMA & TES using default parameters"
+    "static.extrapolation.extrapolateTES&ARIMAUsingDefaultParams": "Extrapolate ARIMA & TES using default parameters",
+    "static.extrapolation.extrapolation": "Extraploations"
 }
