Added checkbox for select multiple tree

--- a/src/assets/img/locales/en.json
+++ b/src/assets/img/locales/en.json
@@ -3344,5 +3344,6 @@
     "static.compareAndSelect.selectForecast": "Click Planning Unit to display details",
     "static.compareAndSelect.forecastSelected": "Forecast selected",
     "static.compareAndSelect.forecastNotSelected": "Forecast not selected",
-    "static.compareAndSelect.showPUPanel": "Show Planning Unit panel"
+    "static.compareAndSelect.showPUPanel": "Show Planning Unit panel",
+    "static.compareAndSelect.selectMultipleTree":"Select Multiple Tree"
 }
